--- a/cartuning/webapp/WEB-INF/web.xml
+++ b/cartuning/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 		 version="3.0">
   <display-name>json</display-name>
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>
   </welcome-file-list>
   
   	<!-- Spring配置文件 -->
