--- a/cartuning/.classpath
+++ b/cartuning/.classpath
@@ -61,5 +61,6 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-webmvc-portlet-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-websocket-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/asm-3.3.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/kaptcha-2.3.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/classes"/>
 </classpath>
